@@ -14,6 +14,8 @@
 
 package com.google.googlejavaformat.java;
 
+import static com.google.common.base.StandardSystemProperty.JAVA_CLASS_PATH;
+import static com.google.common.base.StandardSystemProperty.JAVA_HOME;
 import static com.google.common.truth.Truth.assertThat;
 import static com.google.common.truth.Truth.assertWithMessage;
 import static java.nio.charset.StandardCharsets.UTF_8;
@@ -49,6 +51,16 @@ public class MainTest {
 
   // PrintWriter instances used below are hard-coded to use system-default line separator.
   private final Joiner joiner = Joiner.on(System.lineSeparator());
+
+  private static final ImmutableList<String> ADD_EXPORTS =
+      ImmutableList.of(
+          "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+          "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED");
 
   @Test
   public void testUsageOutput() {
@@ -107,11 +119,13 @@ public class MainTest {
   public void testMain() throws Exception {
     Process process =
         new ProcessBuilder(
-                ImmutableList.of(
-                    Paths.get(System.getProperty("java.home")).resolve("bin/java").toString(),
-                    "-cp",
-                    System.getProperty("java.class.path"),
-                    Main.class.getName()))
+                ImmutableList.<String>builder()
+                    .add(Paths.get(JAVA_HOME.value()).resolve("bin/java").toString())
+                    .addAll(ADD_EXPORTS)
+                    .add("-cp")
+                    .add(JAVA_CLASS_PATH.value())
+                    .add(Main.class.getName())
+                    .build())
             .redirectError(Redirect.PIPE)
             .redirectOutput(Redirect.PIPE)
             .start();
@@ -308,7 +322,7 @@ public class MainTest {
       "@ParametersAreNonnullByDefault",
       "package com.google.common.labs.base;",
       "",
-      "import javax.annotation.CheckReturnValue;",
+      "import com.google.errorprone.annotations.CheckReturnValue;",
       "import javax.annotation.ParametersAreNonnullByDefault;",
       "",
     };
@@ -388,9 +402,9 @@ public class MainTest {
 
     assertThat(out.toString())
         .isEqualTo(
-            b.toAbsolutePath().toString()
+            b.toAbsolutePath()
                 + System.lineSeparator()
-                + c.toAbsolutePath().toString()
+                + c.toAbsolutePath()
                 + System.lineSeparator());
     assertThat(err.toString()).isEmpty();
   }
@@ -433,14 +447,16 @@ public class MainTest {
     Files.write(path, "class Test {\n}\n".getBytes(UTF_8));
     Process process =
         new ProcessBuilder(
-                ImmutableList.of(
-                    Paths.get(System.getProperty("java.home")).resolve("bin/java").toString(),
-                    "-cp",
-                    System.getProperty("java.class.path"),
-                    Main.class.getName(),
-                    "-n",
-                    "--set-exit-if-changed",
-                    "-"))
+                ImmutableList.<String>builder()
+                    .add(Paths.get(JAVA_HOME.value()).resolve("bin/java").toString())
+                    .addAll(ADD_EXPORTS)
+                    .add("-cp")
+                    .add(JAVA_CLASS_PATH.value())
+                    .add(Main.class.getName())
+                    .add("-n")
+                    .add("--set-exit-if-changed")
+                    .add("-")
+                    .build())
             .redirectInput(path.toFile())
             .redirectError(Redirect.PIPE)
             .redirectOutput(Redirect.PIPE)
@@ -459,14 +475,16 @@ public class MainTest {
     Files.write(path, "class Test {\n}\n".getBytes(UTF_8));
     Process process =
         new ProcessBuilder(
-                ImmutableList.of(
-                    Paths.get(System.getProperty("java.home")).resolve("bin/java").toString(),
-                    "-cp",
-                    System.getProperty("java.class.path"),
-                    Main.class.getName(),
-                    "-n",
-                    "--set-exit-if-changed",
-                    path.toAbsolutePath().toString()))
+                ImmutableList.<String>builder()
+                    .add(Paths.get(JAVA_HOME.value()).resolve("bin/java").toString())
+                    .addAll(ADD_EXPORTS)
+                    .add("-cp")
+                    .add(JAVA_CLASS_PATH.value())
+                    .add(Main.class.getName())
+                    .add("-n")
+                    .add("--set-exit-if-changed")
+                    .add(path.toAbsolutePath().toString())
+                    .build())
             .redirectError(Redirect.PIPE)
             .redirectOutput(Redirect.PIPE)
             .start();
@@ -474,7 +492,7 @@ public class MainTest {
     String err = new String(ByteStreams.toByteArray(process.getErrorStream()), UTF_8);
     String out = new String(ByteStreams.toByteArray(process.getInputStream()), UTF_8);
     assertThat(err).isEmpty();
-    assertThat(out).isEqualTo(path.toAbsolutePath().toString() + System.lineSeparator());
+    assertThat(out).isEqualTo(path.toAbsolutePath() + System.lineSeparator());
     assertThat(process.exitValue()).isEqualTo(1);
   }
 
@@ -523,8 +541,8 @@ public class MainTest {
       "class T {",
       "  String s =",
       "      \"one long incredibly unbroken sentence moving from topic to topic so that no one had"
-          + " a\"",
-      "          + \" chance to interrupt\";",
+          + " a chance\"",
+      "          + \" to interrupt\";",
       "}",
       "",
     };
